--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: #7FFFD4;
     
 }
 
